overflow fixed

--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -31,6 +31,7 @@ body {
   scroll-behavior: smooth;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  display: flex;
   align-items: center;
   justify-content: center;
   min-height: 100vh;
@@ -53,7 +54,6 @@ body {
   max-width: 100vw;
   letter-spacing: 0.5px;
   overflow-x: hidden;
-  overflow: auto;
   transition: 0.5s ease-in-out;
 }
 
@@ -65,6 +65,8 @@ body {
 }
 
 .theme-btn {
+  margin: 0px;
+  padding: 0px;
   position: fixed;
   bottom: 0.8rem;
   right: 0.8rem;
